docs/requirements/v3.2.0/REQUIREMENTS.md

Requirements Summary
====================

# default

## As a user, I want to execute content validation against every nth file ([#1](https://github.com/NASA-PDS/validate/issues/1)) 


This requirement is not impacted by the current version
## As a user, I want validate reporting output to support DD_Rule Report rule_type ([#13](https://github.com/NASA-PDS/validate/issues/13)) 


This requirement is not impacted by the current version
## Verify that all name/type attribute values correspond to names denoted context products ([#15](https://github.com/NASA-PDS/validate/issues/15)) 


This requirement is not impacted by the current version
## As a user, I want to raise a FATAL error when a catalog file is invalid ([#16](https://github.com/NASA-PDS/validate/issues/16)) 


This requirement is not impacted by the current version
## As a user, I want to be automatically notified when running validate that a newer version of the software is available ([#44](https://github.com/NASA-PDS/validate/issues/44)) 


This requirement is not impacted by the current version
## Add new target-manifest flag for user to provide a manifest (file) of file/directory paths to validate ([#50](https://github.com/NASA-PDS/validate/issues/50)) 


This requirement is not impacted by the current version
## As a user, I want to be warned when there are alphanumeric characters between fields in Table_Character ([#57](https://github.com/NASA-PDS/validate/issues/57)) 


This requirement is not impacted by the current version
## Validate Table_Character groups and their specified lengths match the specified group_length ([#63](https://github.com/NASA-PDS/validate/issues/63)) 


This requirement is not impacted by the current version
## As a user, I want to validate that all context objects specified in observational products are referenced in the parent bundle/collection Reference_List ([#69](https://github.com/NASA-PDS/validate/issues/69)) 


This requirement is not impacted by the current version
## As a user, I want validate to check number of records/fields specified in label matches the records in the actual data table ([#149](https://github.com/NASA-PDS/validate/issues/149)) 


This requirement is not impacted by the current version
## As a user, I want to validate PDF files are PDF/A ([#164](https://github.com/NASA-PDS/validate/issues/164)) 


This requirement is not impacted by the current version
## As a user, I want to validate a bundle that uses multiple versions of the Information Model / Discipline LDDs ([#188](https://github.com/NASA-PDS/validate/issues/188)) 


This requirement is not impacted by the current version
## As a user, I want validate to raise a WARNING when differing versions of IM are used within a bundle ([#210](https://github.com/NASA-PDS/validate/issues/210)) 


This requirement is not impacted by the current version
## As a user, I want to validate all data types possible per the PDS4 Information Model ([#212](https://github.com/NASA-PDS/validate/issues/212)) 


This requirement is not impacted by the current version
## As a user, I want to validate content for all possible PDS4 table types ([#217](https://github.com/NASA-PDS/validate/issues/217)) 


This requirement is not impacted by the current version
## As a user, I want to validate content for all File_Area_* products ([#229](https://github.com/NASA-PDS/validate/issues/229)) 


This requirement is not impacted by the current version
## As a user, I want to validate multiple bundles at once ([#237](https://github.com/NASA-PDS/validate/issues/237)) 


This requirement is not impacted by the current version
## As a user, I want to verify bundle directories adhere directory naming standards per SR ([#239](https://github.com/NASA-PDS/validate/issues/239)) 


This requirement is not impacted by the current version
## As a developer, I want an API method enable specifying of non-registered context products ([#241](https://github.com/NASA-PDS/validate/issues/241)) 


This requirement is not impacted by the current version
## As a user, I want validate to throw an error when more than one primary product references the same physical file ([#245](https://github.com/NASA-PDS/validate/issues/245)) 


This requirement is not impacted by the current version
## As a user, I want to run validate against object storage ([#266](https://github.com/NASA-PDS/validate/issues/266)) 


This requirement is not impacted by the current version
## As a developer, I want to utilize exit codes to differentiate failures of the process vs. validation errors ([#275](https://github.com/NASA-PDS/validate/issues/275)) 


This requirement is not impacted by the current version
## As a user, I want to validate when a product and label are updated, but the label is not versioned ([#279](https://github.com/NASA-PDS/validate/issues/279)) 


This requirement is not impacted by the current version
## CCB-264: Make the Line Feed (LF) character an allowed record delimiter ([#292](https://github.com/NASA-PDS/validate/issues/292)) 


This requirement is not impacted by the current version
## As a user, I want to the raise a WARNING if the object-defined size in the label does not match the file_size value ([#303](https://github.com/NASA-PDS/validate/issues/303)) 


This requirement is not impacted by the current version
## As a user, I want to validate that all XML Schema collections in NASA PDS archives are secondary collections ([#307](https://github.com/NASA-PDS/validate/issues/307)) 


This requirement is not impacted by the current version
## As a user, I want to check that all Internal References are valid references to other PDS4 products within the current validating bundle ([#308](https://github.com/NASA-PDS/validate/issues/308)) 


This requirement is not impacted by the current version
## As a user, I want to validate that the label references the PDS4 common schematron file which is required by standards ([#309](https://github.com/NASA-PDS/validate/issues/309)) 


This requirement is not impacted by the current version
## As a user, I want to validate all internal references from one product to another exist within the archive ([#316](https://github.com/NASA-PDS/validate/issues/316)) 


This requirement is not impacted by the current version
## As a user I want to see the name of a table/array in errors, if one is specified ([#343](https://github.com/NASA-PDS/validate/issues/343)) 


This requirement is not impacted by the current version
## As a user, I want to cache already downloaded schema/schematrons on the local file system ([#352](https://github.com/NASA-PDS/validate/issues/352)) 


This requirement is not impacted by the current version
## As a user, I want to validate that the field_number values are sequential and match the label specification for maximum number of fields ([#359](https://github.com/NASA-PDS/validate/issues/359)) 


This requirement is not impacted by the current version
## As a user, I want to validate all files referenced by a Product_Document ([#367](https://github.com/NASA-PDS/validate/issues/367)) 


This requirement is not impacted by the current version
## Improve PDF/A validation to include more robust reporting on failures ([#388](https://github.com/NASA-PDS/validate/issues/388)) 


This requirement is not impacted by the current version
## As a user, I want to validate all internal references to products in the PDS archive are valid ([#415](https://github.com/NASA-PDS/validate/issues/415)) 


This requirement is not impacted by the current version
## As a user, I want validate to throw an error when a collection inventory contains an invalid secondary product reference ([#462](https://github.com/NASA-PDS/validate/issues/462)) 


This requirement is not impacted by the current version
## As a user, I want to check that are no duplicate LIDs/LIDVIDs in a File_Area_Inventory ([#476](https://github.com/NASA-PDS/validate/issues/476)) 


This requirement is not impacted by the current version
## As a user, I want to validate labels/bundles/collections using the LBLX file extension ([#482](https://github.com/NASA-PDS/validate/issues/482)) 


This requirement is not impacted by the current version
## As a user, I want to validate a bundle with collections having different label extensions ([#522](https://github.com/NASA-PDS/validate/issues/522)) 


This requirement is not impacted by the current version
## As a user, I want to validate there are no LBLX files referenced in a bundle when XML is the expected PDS4 label extension ([#523](https://github.com/NASA-PDS/validate/issues/523)) 


This requirement is not impacted by the current version
## As a user, I want to receive an error when no products are found within the validation target ([#524](https://github.com/NASA-PDS/validate/issues/524)) 


This requirement is not impacted by the current version
## As a user, I want to receive a warning if records in file are greater than records value specified in label ([#535](https://github.com/NASA-PDS/validate/issues/535)) 


This requirement is not impacted by the current version
## As a user, I want to validate the DOI referenced in the PDS4 label ([#555](https://github.com/NASA-PDS/validate/issues/555)) 


This requirement is not impacted by the current version
## As a user, I want to be able to use validate from a docker container ([#556](https://github.com/NASA-PDS/validate/issues/556)) 


This requirement is not impacted by the current version
## As a user, I want to when a context product has been deprecated ([#592](https://github.com/NASA-PDS/validate/issues/592)) 


This requirement is not impacted by the current version
## As a user, I want to validate all collections referenced from a bundle exist within the archive ([#595](https://github.com/NASA-PDS/validate/issues/595)) 


This requirement is not impacted by the current version
## As a user, I want to validate all products referenced from a collection exist within the archive ([#596](https://github.com/NASA-PDS/validate/issues/596)) 


This requirement is not impacted by the current version
## As a user, I want to be able to use both online and local schema/schematron files. ([#599](https://github.com/NASA-PDS/validate/issues/599)) 


This requirement is not impacted by the current version
## As a user, I want to validate MP4/H.264 encoded video as observational data ([#604](https://github.com/NASA-PDS/validate/issues/604)) 


This requirement is not impacted by the current version
## As a user, I want to validate MP4/H.264/AAC encoded video with audio as observational data ([#605](https://github.com/NASA-PDS/validate/issues/605)) 


This requirement is not impacted by the current version
## As a user, I want to capture registry referential integrity output as a JSON report ([#609](https://github.com/NASA-PDS/validate/issues/609)) 


This requirement is not impacted by the current version
## As a data engineer, I want to run the validator multi-threaded.  Is that a possibility now or in the future? ([#612](https://github.com/NASA-PDS/validate/issues/612)) 


This requirement is not impacted by the current version
## As a user, I would like to enforce browse file extension with encoding type ([#617](https://github.com/NASA-PDS/validate/issues/617)) 


This requirement is not impacted by the current version
## As a user, I want to throw a WARNING when a product's schematron version does not match the schema version ([#628](https://github.com/NASA-PDS/validate/issues/628)) 


This requirement is not impacted by the current version
## As a user, I want to support bit patterns within Special_Constants values ([#651](https://github.com/NASA-PDS/validate/issues/651)) 


This requirement is not impacted by the current version
## As a user, I want the PDF error reports to be output in a user-specified directory ([#658](https://github.com/NASA-PDS/validate/issues/658)) 


This requirement is not impacted by the current version
## As a user, I want to validate WAV encoded audio as observational data ([#662](https://github.com/NASA-PDS/validate/issues/662)) 


This requirement is not impacted by the current version
## As a user, I want to validate M4A/AAC encoded audio as observational data ([#663](https://github.com/NASA-PDS/validate/issues/663)) 


This requirement is not impacted by the current version
## As a user, I want to receive a WARNING when table objects are out of order ([#683](https://github.com/NASA-PDS/validate/issues/683)) 


This requirement is not impacted by the current version